plugins {
    id 'com.android.application'
    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
    id 'com.chaquo.python'
}
apply plugin: 'realm-android'
android {
    namespace 'com.test.thesis_application'
    compileSdk 33

    defaultConfig {
        applicationId "com.test.thesis_application"
        minSdk 26
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
        }
        python {
            pip{
                install "numpy"
                install "pandas"
                install "pymongo"
                install "googlemaps"
                install " scikit-learn"
                install "dnspython"
            }
            // A requirement specifier, with or without a version number:
        }

    }
    android {
        sourceSets {
            main {
                python.srcDir "src/main/python"
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
        mlModelBinding true
    }
    aaptOptions{
        noCompress "tflite"
    }
}

realm {
    syncEnabled = true
}
dependencies {

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.gms:play-services-maps:18.1.0'
    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
    implementation 'androidx.work:work-runtime-ktx:2.8.1' // fix flag Targeting S+ (version 31 and above) requires that one of FLAG_IMMUTABLE or FLAG_MUTABLE be specified when creating a PendingIntent.


    //image requirements
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.cloudinary:cloudinary-android:2.3.1'
    implementation'com.google.android.gms:play-services-location:21.0.1'
    implementation 'com.karumi:dexter:6.2.3'
    implementation 'jp.wasabeef:picasso-transformations:2.4.0'

    //to convert
    implementation 'com.google.code.gson:gson:2.8.9'

    //password hash
    implementation 'org.mindrot:jbcrypt:0.4'

//    //tenserflow
//    implementation 'org.tensorflow:tensorflow-lite-task-vision-play-services:0.4.2'
//    implementation 'com.google.android.gms:play-services-tflite-gpu:16.1.0'


}